# bloom

./: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  bloom.gemspec  build.rs  extconf.rb
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
certs/: misalcedo.pem
examples/: Gemfile
extension/: bloom_filter.c  extconf.rb
lib/: bloom_bench.rb  bloom_ffi.rb  bloom_ruby.rb
spec/: bloom_filter_spec.rb
src/: atomic_bloom_filter.rs  bloom_filter.rs  errors.rs  hash.rs  lib.rs  ruby.rs
wrapper/: bloom_filter.c  extconf.rb
