[package]
name = "bloom"
version = "0.1.0"
authors = ["Miguel D. Salcedo <misalcedo@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.58.1"

[dependencies]
