[package]
name = "bloom"
version = "0.1.0"
authors = ["Miguel D. Salcedo <misalcedo@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
bitvec = "0.22.3"
futures = "0.3.15"
libc = "0.2.97"
openssl = "0.10.35"
tokio = { version = "1.7.1", features = ["full"] }
